--- a/git_stats/activity/hour_of_week.html
+++ b/git_stats/activity/hour_of_week.html
@@ -196,7 +196,7 @@ body { padding-top: 60px; }
 <td style='background-color: #ffffff;'>0</td>
 <td style='background-color: #ffffff;'>0</td>
 <td style='background-color: #f4f4f4;'>1</td>
-<td style='background-color: #ffffff;'>0</td>
+<td style='background-color: #f4f4f4;'>1</td>
 <td style='background-color: #f4f4f4;'>1</td>
 <td style='background-color: #f4f4f4;'>1</td>
 <td style='background-color: #f4f4f4;'>1</td>
@@ -228,7 +228,7 @@ body { padding-top: 60px; }
 <td style='background-color: #ffffff;'>0</td>
 <td style='background-color: #ffffff;'>0</td>
 <td style='background-color: #dedede;'>3</td>
-<td style='background-color: #ffffff;'>0</td>
+<td style='background-color: #dedede;'>3</td>
 <td style='background-color: #ffffff;'>0</td>
 <td style='background-color: #ffffff;'>0</td>
 <td style='background-color: #ffffff;'>0</td>
