--- a/git_stats/files/by_extension.html
+++ b/git_stats/files/by_extension.html
@@ -63,7 +63,7 @@ body { padding-top: 60px; }
         (function() {
 
           window.addEventListener('load', function() {
-                    var options = { "title": { "text": "" },"legend": { "enabled": false },"xAxis": { "title": { "text": null },"categories": [ "",".pdf",".url",".xlsx",".7z",".exe",".txt",".xml",".cat",".inf",".dll",".sys",".zip",".msi",".drawio",".mlx",".md",".ioc",".h",".c",".html",".svg",".png",".css",".ini",".code-workspace",".ino",".py",".log" ] },"yAxis": { "title": { "text": "Files" },"labels": {  } },"tooltip": { "enabled": true },"credits": { "enabled": false },"plotOptions": { "areaspline": {  } },"chart": { "defaultSeriesType": "line","renderTo": "files_by_extension","type": "column" },"subtitle": {  },"series": [{ "name": "Files by extension","data": [ 5,16,2,1,1,3,5,1,1,1,4,2,1,1,1,1,2,1,39,32,1,2,2,1,2,1,2,6,1 ] }] };
+                    var options = { "title": { "text": "" },"legend": { "enabled": false },"xAxis": { "title": { "text": null },"categories": [ "",".pdf",".url",".xlsx",".7z",".exe",".txt",".xml",".cat",".inf",".dll",".sys",".zip",".msi",".drawio",".mlx",".md",".ioc",".h",".c",".html",".svg",".png",".css",".ini",".code-workspace",".ino",".js",".py",".log" ] },"yAxis": { "title": { "text": "Files" },"labels": {  } },"tooltip": { "enabled": true },"credits": { "enabled": false },"plotOptions": { "areaspline": {  } },"chart": { "defaultSeriesType": "line","renderTo": "files_by_extension","type": "column" },"subtitle": {  },"series": [{ "name": "Files by extension","data": [ 5,16,2,1,1,3,5,1,1,1,4,2,1,1,1,1,2,1,39,32,64,2,2,2,2,1,2,3,6,1 ] }] };
         
         window.chart_files_by_extension = new Highcharts.Chart(options);
 
